<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/level_background"
    android:padding="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

    <Button
        android:id="@+id/button2"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:background="@drawable/style_level"
        android:onClick="onClickButtonBack"
        android:text="@string/name_back"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="26sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerVertical="true"
        android:padding="10dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/style_level"
            android:text="@string/top_words1"
            android:textColor="@color/white"
            android:gravity="center"
            android:textSize="32sp"
            android:padding="10dp"
            android:textStyle="bold"
            android:onClick="onClickLevelOne"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/style_level"
            android:text="@string/top_words2"
            android:textColor="@color/white"
            android:gravity="center"
            android:textSize="32sp"
            android:padding="10dp"
            android:textStyle="bold"
            android:layout_marginTop="15dp"
            android:onClick="onClickLevelTwo"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/style_level"
            android:text="@string/top_words3"
            android:textColor="@color/white"
            android:gravity="center"
            android:textSize="32sp"
            android:padding="10dp"
            android:textStyle="bold"
            android:layout_marginTop="15dp"
            android:onClick="onClickLevelTwo"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/style_level"
            android:text="@string/top_words4"
            android:textColor="@color/white"
            android:gravity="center"
            android:textSize="32sp"
            android:padding="10dp"
            android:textStyle="bold"
            android:layout_marginTop="15dp"
            android:onClick="onClickLevelTwo"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/style_level"
            android:text="@string/top_words5"
            android:textColor="@color/white"
            android:gravity="center"
            android:textSize="32sp"
            android:padding="10dp"
            android:textStyle="bold"
            android:layout_marginTop="15dp"
            android:onClick="onClickLevelTwo"/>
    </LinearLayout>
</RelativeLayout>