<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/main_background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:gravity="center"
        android:padding="10dp">

        <TextView
            android:id="@+id/level1textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/style_level"
            android:gravity="center"
            android:onClick="onClickLevelOneToLevel"
            android:text="@string/name_level1"
            android:textColor="@color/white"
            android:textSize="28sp"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name_level2"
            android:layout_gravity="center"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="28sp"
            android:gravity="center"
            android:background="@drawable/style_level"
            android:layout_marginTop="10dp"/>
        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name_level3"
            android:layout_gravity="center"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="28sp"
            android:gravity="center"
            android:background="@drawable/style_level"
            android:layout_marginTop="10dp"/>
        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name_level4"
            android:layout_gravity="center"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="28sp"
            android:gravity="center"
            android:background="@drawable/style_level"
            android:layout_marginTop="10dp"/>

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:background="@drawable/style_level"
            android:gravity="center"
            android:text="@string/English_movie"
            android:textColor="@color/white"
            android:textSize="28sp"
            android:textStyle="bold"
            android:padding="10dp"
            android:onClick="onClickLevelFifeToLevel"/>
    </LinearLayout>


</RelativeLayout>